# hakaton

./: MANIFEST.in  README.md  docker-compose.yml  pyproject.toml
compose/: .env.example
scripts/: register_runner.sh
self_deploy/: __init__.py  __main__.py  cli.py  dockerfile_generator.py  pipeline_generator.py  project_scanner.py  repo_cloner.py  reporter.py  tech_detector.py  template_engine.py
templates/docker/: go.Dockerfile.j2  java-gradle.Dockerfile.j2  java-maven.Dockerfile.j2  node-backend.Dockerfile.j2  node-frontend.Dockerfile.j2  python.Dockerfile.j2
templates/gitlab/: generic.yml.j2  go.yml.j2  java-gradle.yml.j2  java-maven.yml.j2  node.yml.j2  python.yml.j2
