[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "self-deploy"
version = "0.1.0"
description = "CLI skeleton for generating CI/CD pipelines and Dockerfiles."
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
self-deploy = "self_deploy.cli:main"
